; ModuleID = '/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/smp/extr_smp_cmac.c_padding.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/bt/host/bluedroid/stack/smp/extr_smp_cmac.c_padding.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@BT_OCTET16_LEN = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64*, i64)* @padding to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @padding(i64* %0, i64 %1) #0 {
  %3 = alloca i64*, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i64*, align 8
  store i64* %0, i64** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64*, i64** %3, align 8
  store i64* %7, i64** %6, align 8
  %8 = load i64, i64* %4, align 8
  store i64 %8, i64* %5, align 8
  br label %9

9:                                                ; preds = %26, %2
  %10 = load i64, i64* %5, align 8
  %11 = load i64, i64* @BT_OCTET16_LEN, align 8
  %12 = icmp slt i64 %10, %11
  br i1 %12, label %13, label %29

13:                                               ; preds = %9
  %14 = load i64, i64* %5, align 8
  %15 = load i64, i64* %4, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i32 128, i32 0
  %19 = sext i32 %18 to i64
  %20 = load i64*, i64** %6, align 8
  %21 = load i64, i64* @BT_OCTET16_LEN, align 8
  %22 = load i64, i64* %5, align 8
  %23 = sub nsw i64 %21, %22
  %24 = sub nsw i64 %23, 1
  %25 = getelementptr inbounds i64, i64* %20, i64 %24
  store i64 %19, i64* %25, align 8
  br label %26

26:                                               ; preds = %13
  %27 = load i64, i64* %5, align 8
  %28 = add nsw i64 %27, 1
  store i64 %28, i64* %5, align 8
  br label %9

29:                                               ; preds = %9
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
